--- a/core/src/main/boilerplate/sqlest/ast/AliasedColumns.scala.template
+++ b/core/src/main/boilerplate/sqlest/ast/AliasedColumns.scala.template
@@ -23,6 +23,7 @@ import scala.language.higherKinds
  */
 trait AliasedColumns[A] {
   def columnList(a: A): Seq[AliasedColumn[_]]
+  def mapColumns(f: Column[_] => Column[_], selectFunction: Select[_] => Select[_], a: A): A
 }
 
 object AliasedColumns {
@@ -32,21 +33,25 @@ object AliasedColumns {
   implicit val nilAliasedColumns: AliasedColumns[Nil.type] =
     new AliasedColumns[Nil.type] {
       def columnList(nil: Nil.type) = Nil
+      def mapColumns(f: Column[_] => Column[_], selectFunction: Select[_] => Select[_], nil: Nil.type) = nil
     }
 
   implicit val listAliasedColumns: AliasedColumns[List[AliasedColumn[_]]] =
     new AliasedColumns[List[AliasedColumn[_]]] {
       def columnList(list: List[AliasedColumn[_]]) = list
+      def mapColumns(f: Column[_] => Column[_], selectFunction: Select[_] => Select[_], list: List[AliasedColumn[_]]) = list.map(_.mapColumns(f, selectFunction).asInstanceOf[AliasedColumn[_]])
     }
 
   implicit def aliasedColumn[A]: AliasedColumns[AliasedColumn[A]] =
     new AliasedColumns[AliasedColumn[A]] {
       def columnList(aliasedColumn: AliasedColumn[A]) = List(aliasedColumn)
+      def mapColumns(f: Column[_] => Column[_], selectFunction: Select[_] => Select[_], aliasedColumn: AliasedColumn[A]) = aliasedColumn.mapColumns(f, selectFunction).asInstanceOf[AliasedColumn[A]]
     }
 
 [#  implicit def aliasedColumnTuple1[[#C1#]]: AliasedColumns[Tuple1[[#AliasedColumn[C1]#]]] =
     new AliasedColumns[Tuple1[[#AliasedColumn[C1]#]]] {
       def columnList(aliasedColumnTuple: Tuple1[[#AliasedColumn[C1]#]]) = List([#aliasedColumnTuple._1#])
+      def mapColumns(f: Column[_] => Column[_], selectFunction: Select[_] => Select[_], aliasedColumnTuple: Tuple1[[#AliasedColumn[C1]#]]) = Tuple1([#aliasedColumnTuple._1.mapColumns(f, selectFunction).asInstanceOf[AliasedColumn[C1]]#])
     }#
 
 ]
