--- a/core/src/main/boilerplate/sqlest/ast/AliasedColumns.scala.template
+++ b/core/src/main/boilerplate/sqlest/ast/AliasedColumns.scala.template
@@ -17,6 +17,7 @@
 package sqlest.ast
 
 import scala.language.higherKinds
+import sqlest.ast.operations.ColumnOperations._
 
 /**
  * Type class witnessing that all the elements in `A` are instances of `AliasedColumn[_]`
