--- a/core/src/main/boilerplate/sqlest/ast/TableFunctions.scala.template
+++ b/core/src/main/boilerplate/sqlest/ast/TableFunctions.scala.template
@@ -19,17 +19,17 @@ package sqlest.ast
 import scala.language.experimental.macros
 
 trait TableFunctions {
-[#  abstract class TableFunction1[[#A1#]](val tableName: String, val aliasedAs: Option[String] = None) extends BaseTable {
-      def apply[[#B1#]]([#column1: Column[B1]#])(implicit [#column1Equivalence: ColumnTypeEquivalence[A1, B1]#]): TableFunctionApplication[TableFunction1[[#A1#]]] = macro TableFunctionApplyImpl.apply1[[#A1, B1#]]
+[#  abstract class TableFunction1[[#A1#]](val tableName: String, val aliasedAs: Option[String]) extends BaseTable {
+    def apply[[#B1#]]([#column1: Column[B1]#])(implicit [#column1Equivalence: ColumnTypeEquivalence[A1, B1]#]): TableFunctionApplication[TableFunction1[[#A1#]]] = macro TableFunctionApplyImplementations.apply1
   }#
 
 ]
 }
 
-object TableFunctionApplyImpl {
+object TableFunctionApplyImplementations {
   import scala.reflect.macros.whitebox.Context
 
-[#  def apply1[[#A1, B1#]](c: Context)([#column1: c.Expr[Column[B1]]#])([#column1Equivalence: c.Expr[ColumnTypeEquivalence[A1, B1]]#]): c.Tree = {
+[#  def apply1(c: Context)([#column1: c.Expr[Column[_]]#])([#column1Equivalence: c.Expr[ColumnTypeEquivalence[_, _]]#]): c.Tree = {
     import c.universe._
     val tableFunction1 = c.prefix
     q"TableFunctionApplication[${tableFunction1.actualType}](${tableFunction1}.tableName, ${tableFunction1}.aliasedAs, Seq([#$column1#]), ${tableFunction1})"
