--- a/core/src/main/boilerplate/sqlest/extractor/Extractors.scala.template
+++ b/core/src/main/boilerplate/sqlest/extractor/Extractors.scala.template
@@ -17,9 +17,13 @@
 package sqlest.extractor
 
 import sqlest.ast._
+import scala.language.experimental.macros
+import sqlest.untyped.extractor.syntax.NamedExtractSyntax
 
 trait Extractors {
-  implicit def extract[A](column: AliasedColumn[A]): ColumnExtractor[A] =
+  def extract[A]: Dynamic = macro NamedExtractSyntax.extractImpl[A]
+
+  implicit def extractColumn[A](column: AliasedColumn[A]): ColumnExtractor[A] =
     ColumnExtractor(column)
 
 [2..22#  def extract[[#A1#]]([#a1: A1#])(implicit [#b1: ExtractorBuilder[A1]#]) =
