--- a/core/src/main/boilerplate/sqlest/extractor/Extractors.scala.template
+++ b/core/src/main/boilerplate/sqlest/extractor/Extractors.scala.template
@@ -34,6 +34,11 @@ trait Extractors extends LowPriorityExtractors {
   implicit def extractSeq[A](columnSeq: Seq[AliasedColumn[A]]): Seq[Extractor[A]] =
     columnSeq.map(ColumnExtractor(_))
 
+[2..22#  implicit def extractTuple1[[#A1#]](t: Tuple1[[#AliasedColumn[A1]#]]): Tuple1Extractor[[#A1#]] =
+    new Tuple1Extractor[[#A1#]]([#t._1#])#
+
+]
+
 [2..22#  def extract[[#A1#]]([#a1: A1#])(implicit [#b1: ExtractorBuilder[A1]#]) =
     new Tuple1Extractor[[#b1.Result#]]([#b1(a1)#])#
 
