--- a/core/src/main/boilerplate/sqlest/extractor/TupleExtractors.scala.template
+++ b/core/src/main/boilerplate/sqlest/extractor/TupleExtractors.scala.template
@@ -16,7 +16,6 @@
 
 package sqlest.extractor
 
-import java.sql.ResultSet
 import sqlest.untyped._
 
 case class Tuple1Extractor[A1](e1: Extractor[A1]) extends ProductExtractor[Tuple1[A1]] {
@@ -24,9 +23,9 @@ case class Tuple1Extractor[A1](e1: Extractor[A1]) extends ProductExtractor[Tuple
 
   val innerExtractors = List(e1)
 
-  def initialize(row: ResultSet) = Tuple1(e1.initialize(row))
+  def initialize(row: Row) = Tuple1(e1.initialize(row))
 
-  def accumulate(row: ResultSet, accumulator: Accumulator) = Tuple1(e1.accumulate(row, accumulator._1))
+  def accumulate(accumulator: Accumulator, row: Row) = Tuple1(e1.accumulate(accumulator._1, row))
 
   def emit(accumulator: Accumulator) = e1.emit(accumulator._1).map(Tuple1.apply)
 }
@@ -36,11 +35,11 @@ case class Tuple1Extractor[A1](e1: Extractor[A1]) extends ProductExtractor[Tuple
 
   val innerExtractors = List([#e1#])
 
-  def initialize(row: ResultSet) =
+  def initialize(row: Row) =
     Tuple1([#e1.initialize(row)#])
 
-  def accumulate(row: ResultSet, accumulator: Accumulator) =
-    Tuple1([#e1.accumulate(row, accumulator._1)#])
+  def accumulate(accumulator: Accumulator, row: Row) =
+    Tuple1([#e1.accumulate(accumulator._1, row)#])
 
   def emit(accumulator: Accumulator) =
     for {
