--- a/extractors/src/main/boilerplate/sqlest/extractor/TupleExtractors.scala.template
+++ b/extractors/src/main/boilerplate/sqlest/extractor/TupleExtractors.scala.template
@@ -16,7 +16,7 @@
 
 package sqlest.extractor
 
-case class Tuple1Extractor[A1](e1: Extractor[A1]) extends ProductExtractor[Tuple1[A1]] {
+case class Tuple1Extractor[Row, A1](e1: Extractor[Row, A1]) extends ProductExtractor[Row, Tuple1[A1]] {
   type Accumulator = Tuple1[e1.Accumulator]
 
   val innerExtractors = List(e1)
@@ -28,7 +28,7 @@ case class Tuple1Extractor[A1](e1: Extractor[A1]) extends ProductExtractor[Tuple
   def emit(accumulator: Accumulator) = e1.emit(accumulator._1).map(Tuple1.apply)
 }
 
-[2..22#case class Tuple1Extractor[[#A1#]]([#e1: Extractor[A1]#]) extends ProductExtractor[Tuple1[[#A1#]]] {
+[2..22#case class Tuple1Extractor[Row, [#A1#]]([#e1: Extractor[Row, A1]#]) extends ProductExtractor[Row, Tuple1[[#A1#]]] {
   type Accumulator = Tuple1[[#e1.Accumulator#]]
 
   val innerExtractors = List([#e1#])
