--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: scala
 
 scala:
-  - 2.11.5
+  - 2.11.6
 
 after_success:
   - '[[ $TRAVIS_BRANCH == "master" ]] && sbt publish'
+
+sudo: false
 
 env:
   global:
