Use `tut` for compiled documentation

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: scala
 scala:
   - 2.11.6
 
+script:
+  - sbt clean compile tut test
+
 after_success:
   - '[[ $TRAVIS_BRANCH == "master" ]] && sbt publish'
 
